<resources>
	<string name="app_name">Caramel HOMEcchiato</string>
	<string name="join_form_email">이메일</string>
	<string name="join_form_password">비밀번호</string>
	<string name="join_form_name">이름</string>
	<string name="join_form_password_confirm">비밀번호 확인</string>
	<string name="button_confirm">확인</string>
	<string name="button_reset">취소</string>
	<string name="join_with_phone">핸드폰 번호로 회원가입</string>
	<string name="join_with_email">이메일로 회원가입</string>
	<string name="join_with_kakao">카카오 계정으로 회원가입</string>
	<string name="n_likes">%d Likes</string>
	<string name="comments">댓글보기</string>
	<string name="recent_post">최근 포스트</string>
	<string name="recipe">레시피</string>
	<string name="timer">타이머</string>
	<string name="my_page">마이페이지</string>
	<string name="drawer_open">열기</string>
	<string name="drawer_close">닫기</string>
	<string name="my_recipe">마이레시피</string>
	<string name="follows">팔로워/팔로우</string>
	<string name="likes">좋아요</string>
	<string name="search">친구찾기</string>
	<string name="settings">설정</string>
	<string name="login_with_email_or_phone">이메일/핸드폰번호</string>
	<string name="login_password">비밀번호</string>
	<string name="find_password">비밀번호 찾기</string>
	<string name="very_long_text">
 &#160;왜 미쳤다고들 그러는지 대체 우리는 남보다 수 십 년씩 떨어지고도 마음놓고 지낼 작정이냐. 모르는 것은 내 재주도 모자랐겠지만 게을러 빠지게 놀고 만 지내던 일도 좀 뉘우쳐 봐야 아니 하느냐. 여남은 개쯤 써 보고서 시 만들 줄 안다고 잔뜩 믿고 굴러다니는 패들과는 물건이 다르다. 二千點에서 三十點을 고르는데 땀을 흘렸다. 31년 32년 일에서 용대가리를 딱 꺼내어 놓고 하도들 야단에 배암 꼬랑지커녕 쥐꼬랑지도 못 달고 그냥 두니 서운하다. 깜박 신문이라는 답답한 조건을 잊어버린 것도 실수지만 李泰俊 朴泰遠 두 형이 끔찍이도 편을 들어 준 데는 절한다.<br />
 &#160;鐵 ― 이것은 내 새길의 암시요 앞으로 제 아무에게도 屈하지 않겠지만 호령하여도 에코 ― 가 없는 무인지경은 딱하다. 다시는 이런 ― 물론 다시는 무슨 다른 방도가 있을 것이고 위선 그만둔다. 한동안 조용하게 공부나 하고 따는 정신병이나 고치겠다.
	</string>
	<string name="input_username">사용자 이름</string>
	<string name="input_motd">소개</string>
	<string name="button_edit_profile_image">프로필 사진 편집</string>
	<string name="login_with_kakaotalk">카카오 계정으로 로그인</string>
	<string name="login">로그인</string>
	<string name="join">회원가입</string>
	<string name="join_form_phone_number">핸드폰 번호</string>
	<string name="description_logo">훔친로고</string>
	<string name="setting_profile">프로필</string>
	<string name="setting_change_password">비밀번호 변경</string>
	<string name="setting_logout">로그아웃</string>
	<string name="current_password">현재 비밀번호</string>
	<string name="new_password">새로운 비밀번호</string>
	<string name="password_check_failed">비밀번호가 일치하지 않습니다!</string>
	<string name="button_follow">팔로우</string>
	<string name="button_following">팔로우 중</string>
	<string name="button_write_post">글쓰기</string>
	<string name="button_edit_profile">프로필 편집</string>
	<string name="tab_follower">팔로워</string>
	<string name="tab_following">팔로우</string>
	<string name="post_list_error">포스트를 불러오는 도중 에러가 발생했습니다.</string>
	<string name="post_list_end">.</string>
	<string name="recipe_category_hot_coffee">HOT Coffee</string>
	<string name="recipe_category_ice_coffee">ICE Coffee</string>
	<string name="recipe_category_tea">Tea</string>
	<string name="recipe_category_ade">Ade</string>
	<string name="recipe_category_smoothie">Smoothie</string>
	<string name="recipe_category_etc">Etc.</string>
	<string name="description_like">좋아요</string>
	<string name="description_profile_image">프로필 사진</string>
	<string name="description_post_option">포스트 옵션</string>
	<string name="description_recipe_category_icon">레시피 카테고리 아이콘</string>
	<string name="n_temperature">%d ℃</string>
	<string name="button_write_recipe">새 레시피</string>
	<string name="recipe_index">%d / %d</string>
	<string name="description_recipe_image">레시피 이미지</string>
	<string name="hint_edit_post">입력하세요</string>
	<string name="button_submit">등록</string>
	<string name="click_to_select_image">클릭해서 이미지 첨부</string>
	<string name="description_post_image">포스트 이미지</string>
	<string name="hint_edit_recipe_title">레시피 타이틀</string>
	<string name="recipe_list_error">레시피를 불러오는 도중 오류가 발생했습니다.</string>
	<string name="description_recipe_option">레시피 옵션</string>
	<string name="menu_delete">삭제</string>
	<string name="menu_edit">수정</string>
	<string name="delete_image">이미지 삭제</string>
	<string name="revert_image">이미지 변경 취소</string>
	<string name="remove_rating">평가 삭제</string>
	<string name="rate">평가하기</string>
	<string name="recipes_by_same_user">같은 유저의 레시피</string>
	<string name="update_rating">평가 수정</string>
	<string name="warmer">MiniOn</string>
	<string name="empty_likes_list">좋아요를 누른 포스트가 여기에 표시됩니다.</string>
	<string name="hint_search_name">검색할 이름을 입력하세요</string>
</resources>