<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/nav"
	android:layout_width="250dp"
	android:layout_height="match_parent"
	android:layout_gravity="end|top"
	android:background="@color/white">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:background="@color/VanDykeBrown"
		android:translationZ="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">


		<ImageView
			android:id="@+id/imageViewProfile"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginEnd="15dp"
			android:layout_marginBottom="30dp"
			android:contentDescription="@string/description_profile_image"
			android:src="@drawable/default_profile_image"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/textViewProfileName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginBottom="12dp"
			android:gravity="end|bottom"
			android:maxLines="2"
			android:textColor="@color/Almond"
			android:textSize="20sp"
			app:autoSizeTextType="uniform"
			app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
			app:layout_constraintEnd_toStartOf="@+id/imageViewProfile"
			app:layout_constraintStart_toStartOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<TextView
		android:id="@+id/myRecipesMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_marginEnd="15dp"
		android:text="@string/my_recipe"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

	<TextView
		android:id="@+id/followsMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="15dp"
		android:text="@string/follows"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/myRecipesMenu" />

	<TextView
		android:id="@+id/likesMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="15dp"
		android:text="@string/likes"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/followsMenu" />

	<TextView
		android:id="@+id/searchFriendsMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="15dp"
		android:text="@string/search"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/likesMenu" />

	<TextView
		android:id="@+id/warmerMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginEnd="15dp"
		android:text="@string/warmer"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/searchFriendsMenu" />

	<TextView
		android:id="@+id/settingsMenu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="15dp"
		android:text="@string/settings"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>