<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/imageLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		android:background="@color/white"
		android:translationZ="10dp">

		<ImageView
			android:id="@+id/imageViewCover"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:background="@color/empty_attachment"
			android:contentDescription="@string/description_recipe_image"
			android:scaleType="centerCrop"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintDimensionRatio="H,4:3"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<View
			android:id="@+id/imagePlaceholderApproximate"
			android:layout_width="0dp"
			android:layout_height="100dp"
			android:clickable="false"
			android:visibility="invisible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textViewAttach"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:clickable="false"
			android:gravity="center"
			android:text="@string/click_to_select_image"
			android:textColor="@color/placeholder"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintTop_toBottomOf="@id/imagePlaceholderApproximate" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/categoryLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/recipe_category_button_background"
			android:paddingHorizontal="12dp"
			android:paddingVertical="6dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent">

			<ImageView
				android:id="@+id/imageViewCategoryIcon"
				android:layout_width="20dp"
				android:layout_height="20dp"
				android:contentDescription="@string/description_recipe_category_icon"
				android:src="@drawable/ade"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/textViewCategoryName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:text="@string/recipe_category_ade"
				android:textColor="@color/white"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@id/imageViewCategoryIcon"
				app:layout_constraintTop_toTopOf="parent" />

			<View
				android:layout_width="8dp"
				android:layout_height="5dp"
				android:layout_marginStart="8dp"
				android:background="@drawable/arrow"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@id/textViewCategoryName"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/coverLayout"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:paddingHorizontal="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imageLayout"
		android:background="@color/OrangeYellowCrayola">

		<EditText
			android:id="@+id/editTextTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:hint="@string/hint_edit_recipe_title"
			android:importantForAutofill="no"
			android:maxLines="3"
			android:textColor="#80000000"
			android:textStyle="bold"
			android:textSize="36sp"
			app:autoSizeTextType="uniform"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:textColorHint="#40000000"/>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:background="@drawable/placeholder_user_box"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

			<include
				layout="@layout/view_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</FrameLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>