<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/backgroundLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/OrangeYellowCrayola">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clipChildren="false"
			android:orientation="vertical">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/imageLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				android:translationZ="10dp"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:id="@+id/imageViewCover"
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:background="@color/empty_attachment"
					android:contentDescription="@string/description_recipe_image"
					android:scaleType="centerCrop"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintDimensionRatio="H,4:3"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="120dp"
				android:background="@color/white"
				android:clipChildren="false">

				<FrameLayout
					android:id="@+id/categoryLayout"
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:clipChildren="false"
					android:clipToPadding="false"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintDimensionRatio="H,1:1"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent">

					<ImageView
						android:id="@+id/imageViewCategoryIcon"
						android:layout_width="200dp"
						android:layout_height="200dp"
						android:layout_gravity="center"
						android:background="@drawable/icon_background_30dp"
						android:backgroundTint="@color/OrangeYellowCrayola"
						android:contentDescription="@string/description_recipe_category_icon"
						android:cropToPadding="false"
						android:src="@drawable/ade"/>

				</FrameLayout>

				<TextView
					android:id="@+id/textViewTitle"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:layout_marginVertical="20dp"
					android:layout_marginStart="30dp"
					android:layout_marginEnd="30dp"
					android:gravity="center"
					android:maxLines="3"
					android:text="@string/post_list_error"
					android:textColor="@color/VanDykeBrown"
					android:textStyle="bold"
					app:autoSizeMaxTextSize="48sp"
					app:autoSizeMinTextSize="20sp"
					app:autoSizeTextType="uniform"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/categoryLayout"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="10dp"
				android:layout_marginTop="30dp"
				android:background="@drawable/user_box_background"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<include
					layout="@layout/view_user"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />

			</FrameLayout>

		</LinearLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>